@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1004 2012/03/25 09:09:31 tron Exp $
+$NetBSD: CHANGES-2012,v 1.1005 2012/03/25 15:20:33 obache Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -1664,3 +1664,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated emulators/wine-devel to 1.3.26nb5 [sbd 2012-03-25]
 	Updated lang/python26 to 2.6.7nb3 [tron 2012-03-25]
 	Updated net/mikutter to 0.1.0.723nb1 [obache 2012-03-25]
+	Added security/kgpg version 4.8.0 [markd 2012-03-26]
